--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,19 @@
             "": "src/"
         }
     },
+    "repositories": [
+        {
+            "type": "package",
+            "package": {
+                "name": "jquery/jquery",
+                "version": "1.11.1",
+                "dist": {
+                    "url": "http://code.jquery.com/jquery-1.11.1.js",
+                    "type": "file"
+                }
+            }
+        }
+    ],
     "require": {
         "php": ">=5.3.9",
         "symfony/symfony": "2.7.*",
@@ -17,7 +30,12 @@
         "symfony/monolog-bundle": "~2.4",
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "friendsofsymfony/user-bundle": "^1.3",
+        "braincrafted/bootstrap-bundle": "~2.0",
+        "twbs/bootstrap": "3.3.*",
+        "jquery/jquery":  "1.11.*",
+        "oyejorge/less.php": "~1.5"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
